<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    android:paddingLeft="5dp" >

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/app_title"
        android:textColor="@color/highlight"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/app_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:lines="1"
        android:text="@string/app_subtitle"
        android:textColor="@color/light"
        android:textSize="12sp" />

    <TextView android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/dark"
        android:textColor="@color/highlight"
        android:textSize="14sp"
        android:text="@string/rules"
    />
    
    <TextView android:id="@+id/start_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/dark"
        android:textColor="@color/light"
        android:textSize="14sp"
        android:text="@string/start_bar"
    />
    
    <TextView
        android:id="@+id/app_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_get_started"
        android:textColor="@color/highlight"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/user_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/light"
        android:hint="@string/user_prompt" 
        android:inputType="textNoSuggestions"
        android:imeOptions="actionDone"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/vegas_visits_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/vegas_visits_prompt"
            android:textColor="@color/highlight"
            android:textSize="14sp" />

        <Spinner android:id="@+id/vegas_visits" 
                 android:layout_width="37dp"
                 android:layout_height="25dp" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/show_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/show_answers"
            android:textColor="@color/highlight"
            android:textSize="12sp" />
        
        <CheckBox android:id="@+id/chk_show_answers"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="false"
	        android:onClick="onShowAnswersClick"/>
        
    </LinearLayout>
    
    <Button
        android:id="@+id/user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="runGame"
        android:text="@string/user_btn_new" />

    <TextView android:id="@+id/response_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/light"
        android:background="@color/dark"
        android:textSize="18sp"
    />
    
</LinearLayout>