<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@color/dark"
    android:orientation="vertical"
    tools:context=".GameDisplay" >

    <LinearLayout
	      android:id="@+id/game_row_1"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_marginBottom="5dp"
	      android:orientation="horizontal" >
            
    	<TextView
	       android:id="@+id/user_label"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:textSize="18sp"
	       android:textColor="@color/highlight"
	       android:background="@color/dark"
	       android:drawableRight="@drawable/huh"
	       android:drawablePadding="15dp"
	    />

    </LinearLayout>
    
    <LinearLayout
          android:id="@+id/game_row_2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:orientation="horizontal" >
          
           <TextView
               android:id="@+id/game_hdr_label_1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="5dp"
               android:textSize="14sp" 
               android:background="@color/dark"
               android:textColor="@color/light"
               android:text="@string/game_hdr_label_1"
           />

           <TextView
		       android:id="@+id/points"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:textSize="18sp"
		       android:background="@color/dark"
		       android:textColor="@color/green"
           />
           
           <TextView
		       android:id="@+id/game_hdr_label_2"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_marginLeft="5dp"
		       android:layout_marginRight="5dp"
		       android:textSize="14sp"
		       android:background="@color/dark"
		       android:textColor="@color/light"
		       android:text="@string/game_hdr_label_2"
           />
           
           <TextView
		       android:id="@+id/drinks"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:textSize="18sp"
		       android:background="@color/dark"
		       android:textColor="@color/red"
	        />
           
           <TextView
		       android:id="@+id/game_hdr_label_3"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_marginLeft="5dp"
		       android:layout_marginRight="5dp"
		       android:textSize="14sp"
		       android:background="@color/dark"
		       android:textColor="@color/light"
		       android:text="@string/game_hdr_label_3"
		   />
        
    </LinearLayout>

    <LinearLayout 
          android:id="@+id/game_row_3"
          android:layout_width="wrap_content"
	      android:layout_height="wrap_content" 
	      android:layout_marginBottom="20dp"
	      android:orientation="vertical" >
           
          	<TextView
		       android:id="@+id/question"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:textSize="14sp"
		       android:background="@color/dark"
		       android:textColor="@color/highlight"
        	/>
    </LinearLayout>

    <LinearLayout
          android:id="@+id/game_row_4"
          android:layout_width="wrap_content"
    	  android:layout_height="wrap_content" 
          android:layout_marginBottom="20dp"
          android:orientation="vertical" >
          
          <ListView
              android:id="@+id/answers"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:background="@color/dark"
              android:divider="@color/light"
              android:dividerHeight="1dp"
          />
    </LinearLayout>

</LinearLayout>